--- a/index.html
+++ b/index.html
@@ -35,6 +35,32 @@
             <img src="images/hardy.png" alt="HARDY IMG">
          </div>
     </header>
+
+    <!--- main section style strat here---->
+    <main>
+        <section class="about-section">
+            <h2 class="about-title">About Me</h2>
+            <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-main-column">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-description">SAIFUL</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">email:</p>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Birth:</p>
+                    <p class="info-description">1 May 2002</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From:</p>
+                    <p class="info-description">CUMILLA,BD</p>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
