font awesome add

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
     <!-- gooogle font link up -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f747b595a4.js" crossorigin="anonymous"></script>
 
     <!------ custom css link up ----->
     <link rel="stylesheet" href="style/portfolio.css">
@@ -29,8 +29,8 @@
                 <h3 class="banner-sub-title">Hi, i am</h3>
                 <h1 class="banner-title">SAIFUL ARAFAT</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <a class="file" href="file:#">Download CV</a>
-                <a class="phone" href="tel:#">Contact</a>
+                <a class="file" href="file:#"><i class="fa-solid fa-download"></i> Download CV</a>
+                <a class="phone" href="tel:#"><i class="fa-light fa-phone"></i> Contact</a>
             </div>
             <img src="images/hardy.png" alt="HARDY IMG">
          </div>
@@ -161,7 +161,7 @@
             
              </div>
              <div class="resume-btn">
-                <a class="btn-primary" href="file:#">Download CV</a>
+                <a class="btn-primary" href="file:#"><i class="fa-solid fa-download"></i> Download CV</a>
              </div>    
         </section>
 
