--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                     <form action="">
                         <input type="text" name="" id="" placeholder="Your name"><br>
                         <input type="email" placeholder="Your email"><br>
-                        <textarea rows="5" cols="50" placeholder="Message">
+                        <textarea rows="5" cols="50">
+                           <input type="text" placeholder="Your Message">
                         </textarea>
                         <input class="btn-primary" type="button" value="Submit">
                     </form>
